force-app/main/default/objects/cgcloud__Product_Listing_Module__c/cgcloud__Product_Listing_Module__c.object-meta.xml
<CustomObject>
    <description>Add products to Product Assortment with listing modules</description>
    <label>Product Listing Module</label>
    <nameField>
        <displayFormat>PLM-{00000000}</displayFormat>
        <label>Product Listing Module Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Listing Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>