force-app/main/default/objects/cgcloud__Product_Listing_Module__c/fields/cgcloud__Facing__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Facing__c</fullName>
    <description>Product facings for the module.</description>
    <label>Facing</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>