force-app/main/default/objects/cgcloud__Product_Listing_Module__c/fields/cgcloud__Listing_Module_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Listing_Module_Name__c</fullName>
    <description>References to the listing module.</description>
    <label>Listing Module Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>