force-app/main/default/objects/cgcloud__Product_Listing_Module__c/fields/cgcloud__Price__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price__c</fullName>
    <description>Product price for the module.</description>
    <label>Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>