force-app/main/default/objects/cgcloud__Product_Listing_Module__c/fields/cgcloud__Product_Assortment_Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Assortment_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to product assortment product.</description>
    <label>Product Assortment Product</label>
    <referenceTo>AssortmentProduct</referenceTo>
    <relationshipLabel>Product Listing Modules</relationshipLabel>
    <relationshipName>Product_Listing_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>