force-app/main/default/objects/cgcloud__Product_Listing_Module__c/validationRules/cgcloud__Product_Assort_Prod_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Product_Assort_Prod_cannot_be_modified</fullName>
    <active>true</active>
    <description>The Product Assortment Product can&apos;t be edited after Product Listing Module creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(cgcloud__Product_Assortment_Product__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Product_Assortment_Product__c</errorDisplayField>
    <errorMessage>The Product Assortment Product can&apos;t be edited after Product Listing Module creation.</errorMessage>
</ValidationRule>